<resources>
    <string name="app_name">MultipleTimers</string>
    <string name="save_text">Save</string>
    <string name="reset_text">Reset</string>
    <string name="option_dialog_title">Options</string>
    <string name="settings_button">Save Settings</string>
    <string name="edit_button_text">Edit</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="about_title">About</string>
    <string name="about_text">The purpose of this app is to assist coaches and spectators of cross country and track races to take splits of multiple runners at the same time.</string>
    <string name="add_title">Add a runner</string>
    <string name="name">Name</string>
    <string name="add_hint">Enter Name</string>
    <string name="confirmation_text">Are you sure</string>
    <string name="cancel_text">cancel</string>
    <string name="dialog_add_title">Add a Runner</string>
    <string name="dialog_edit_title">Edit Runner</string>
    <string name="delete">delete</string>
    <string name="lap_number">Lap #</string>
    <string name="choice">choice</string>
    <string name="start_tutorial">Press the start button to start or continue the main timer.</string>
    <string name="stop_restart_tutorial">Press pause or stop to pause the timer.</string>
    <string name="main_restart_tutorial_text">Press restart to restart the timer.</string>
    <string name="fab_tutorial">Press the add button located in the bottom left to add a runner.</string>
    <string name="runner_card_tutorial">Long click the runner’s name to edit or delete the runner.\n\nPress split to take the split of the runner.\n\nPress stop to end the timer on the runner and take the final split.\n\nPress the button that says last split to review the splits taken for the runner.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string-array name="settings_array">
        <item>Total Split</item>
        <item>Lap Split</item>
        <item>Both</item>
    </string-array>
</resources>
